[package]
name = "bevy-minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy.workspace = true
board_plugin = { path = "board_plugin" }
bevy-inspector-egui = { version = "0.19.0", optional = true }

[workspace]
members = [
    "board_plugin"
]

[workspace.dependencies]
bevy = "0.11"