[package]
name = "bevy-minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy.workspace = true
board_plugin = { path = "board_plugin" }
bevy-inspector-egui = { version = "0.19.0", optional = true }

[workspace]
resolver = "2"
members = [
    "board_plugin"
]

[workspace.dependencies]
# Remember to revert this before releasing your game! 
# Otherwise you will need to include libbevy_dylib
# alongside your game if you want it to run.
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
# bevy = "0.11"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
