[package]
name = "bevy-minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui", "bevy/dynamic_linking"]

[dependencies]
bevy.workspace = true
board_plugin = { path = "board_plugin" }
bevy-inspector-egui = { version = "0.19.0", optional = true }

[workspace]
resolver = "2"
members = [
    "board_plugin"
]

[workspace.dependencies]
bevy = "0.11"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
