[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
bevy = "0.11"
serde = "1.0"
rand = "0.8"
colored = { version = "2.0", optional = true }
bevy-inspector-egui = { version = "0.18.3", optional = true }
